# Education

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: common-template.yml  docker-publish.yml  docker-publish2.yml  publish  publish.yml
App/: .dockerignore  Dockerfile  README.md  pyproject.toml
App/project/: main.py
App/project/dbase-service/: Dockerfile  postgres.sql
App/project/service/: connection.py  pyproject.toml
project/: .gitignore  docker-compose.yml  main.py
project/dbase-service/: Dockerfile
project/service/: Dockerfile  main.py  pyproject.toml
