[tool.poetry]
name = "for-tim"
version = "0.1.0"
description = ""
authors = ["Roostique <mannapovr@sigma-geophys.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.99.1"
uvicorn = "^0.22.0"
psycopg2 = "^2.9.6"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
